Everything in, but still not corrected.

--- a/Paper.bib
+++ b/Paper.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Max Simon at 2017-08-14 22:21:16 +0200 
+%% Created for Max Simon at 2017-08-15 11:22:59 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -198,9 +198,9 @@
 
 @article{fakdimers,
 	Address = {England},
-	Author = {Brami‐Cherrier, Karen and Gervasi, Nicolas and Arsenieva, Diana and Walkiewicz, Katarzyna and Boutterin, Marie‐Claude and Ortega, Alvaro and Leonard, Paul G and Seantier, Bastien and Gasmi, Laila and Bouceba, Tahar and Kadar{\'e}, Gress and Girault, Jean‐Antoine and Arold, Stefan T},
+	Author = {Brami-Cherrier, Karen and Gervasi, Nicolas and Arsenieva, Diana and Walkiewicz, Katarzyna and Boutterin, Marie‐Claude and Ortega, Alvaro and Leonard, Paul G and Seantier, Bastien and Gasmi, Laila and Bouceba, Tahar and Kadar{\'e}, Gress and Girault, Jean‐Antoine and Arold, Stefan T},
 	Date-Added = {2017-07-28 22:24:59 +0000},
-	Date-Modified = {2017-07-28 22:25:07 +0000},
+	Date-Modified = {2017-08-15 09:22:59 +0000},
 	Issn = {0261-4189 and 1460-2075},
 	Journal = {The EMBO Journal},
 	Keywords = {focal adhesion kinase ; cell adhesion ; signal transduction ; non‐receptor tyrosine kinase ; focal adhesion},
