--- a/document.tex
+++ b/document.tex
@@ -37,13 +37,13 @@ oneside, % oneside / twoside
 
 \newcommand{\pope}{POPE}
 \newcommand{\popc}{POPC}
-\newcommand{\forceunit}{\si{\kilo\joule\mole^{-1}\nano\metre^{-2}}}
+\newcommand{\forceunit}{\si{\pico\newton}}
 
 % MyFig: \myFig[width]{source}{label}{figure title}{text}
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-%\includeonly{setup}
+%\includeonly{conclusion}
 
 \begin{document}
 % chapter introduction
