--- a/results.tex
+++ b/results.tex
@@ -4,18 +4,22 @@ In this chapter, we present our results from the simulations. First of all FAK i
 %
 \section{FAK in solution}
 \input{results/freeFAK}
+\clearpage
 %
 %
 \section{Free energy profile of basic patch}
 \input{results/umbrella}
+\clearpage
 %
 %
-\section{Impact of stabilizing force}
+\section{Impact of stabilising force}
 \input{results/forceAnalysis}
+\clearpage
 %
 %
 \section{Conformational changes on a membrane}
 \input{results/membrane}
+\clearpage
 %
 %
 \section{Multiple FAK interactions}
